feat: Usando querySelector para Capturar Valores no HTML

--- a/objeto.html
+++ b/objeto.html
@@ -6,6 +6,31 @@
     <title>Entendendo Objeto Javascript</title>
 </head>
 <body>
+    <main>
+        <form action="" method="get">
+            <label for="txtNome">Nome</label>
+            <input type="text" name="nome" id="txtNome">
+            <br>
+
+            <label for="txtAltura">Altura</label>
+            <input type="text" name="altura" id="txtAltura">
+            <br>
+
+            <label for="txtIdade">Idade</label>
+            <input type="number" name="idade" id="txtIdade">
+            <br>
+
+            <label for="txtDataNascimento">Data de Nascimento</label>
+            <input type="date" name="dataNascimento" id="txtDataNascimento">
+            <br>
+
+            <button id="btnMostrar" type="button">Mostrar</button>
+        </form>
+
+        <div id="resultado"></div>
+
+    </main>
+
     <script src="js/objeto.js"></script>
 </body>
 </html>
