--- a/pagina3.html
+++ b/pagina3.html
@@ -30,14 +30,14 @@
     </header>
     <main>
 
-        <table width="100%" cellspacing="15" border="0" id="tabPrincipal">
+        <table width="100%" cellspacing="20" border="0" id="tabPrincipal">
             <tr>
-                <td class="colDestaque" colspan="2">
+                <td class="colDestaque" cellspacing="0" colspan="2">
 
-                    <table border="0">
-                        <tr class="linDestaque">
+                    <table id="tabDestaques" border="0">
+                        <tr class="linTituloTab">
                             <td colspan="2">
-                                <h1>DESTAQUES</h1>
+                                <h1>Destaques</h1>
                             </td>
                         </tr>
                         <tr>
@@ -52,7 +52,10 @@
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati dolorum, libero
                                     autem quod deleniti dolorem ipsum excepturi consequatur reiciendis, veritatis quis
-                                    ut porro quia. Eligendi, debitis architecto! Eum, corrupti repellendus!
+                                    ut porro quia. Eligendi, debitis architecto! Eum, corrupti repellendus!Lorem ipsum
+                                    dolor sit amet, consectetur adipisicing elit. Obcaecati dolorum, libero
+                                    autem quod deleniti dolorem ipsum excepturi consequatur reiciendis, veritatis quis
+                                    ut porro quia. 
                                 </p>
                                 <button class="btnLeiaMais">
                                     Leia Mais
@@ -64,7 +67,7 @@
                 </td>
                 <td class="colMaisLidos" rowspan="2">
 
-                    <table>
+                    <table id="tabMaisLidos" cellspacing="20">
                         <tr>
                             <td>
                                 <input type="text" placeholder="Digite o termo e pressione o enter">
@@ -72,35 +75,34 @@
                         </tr>
                         <tr>
                             <td>
-                                <h3 class="maisArtigos">
+                                <h2>
                                     MAIS LIDOS
-                                </h3>
+                                </h2>
                                 <ul>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
-                                    <li>Donec ac elil</li>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
                                 </ul>
                             </td>
                         </tr>
                         <tr>
                             <td>
-
                                 <div id="quadrados">
 
-                                    <div class="quadradinho">
+                                    <div class="quad quadradinho1">
 
                                     </div>
-                                    <div class="quadradinho">
+                                    <div class="quad quadradinho2">
 
                                     </div>
-                                    <div class="quadradinho">
+                                    <div class="quad quadradinho3">
 
                                     </div>
-                                    <div class="quadradinho">
+                                    <div class="quad quadradinho4">
 
                                     </div>
                                 </div>
@@ -116,18 +118,18 @@
             </tr>
             <tr>
                 <td class="colProgramacao">
-                    <table>
-                        <tr>
+                    <table id="tabProgramacao">
+                        <tr class="linTituloTab">
                             <td>
                                 <h2>Programação</h2>
                             </td>
                         </tr>
-                        <tr>
+                        <tr class="artDestaque">
                             <td>
-                                <h3>Artigo em Destaque</h3>
+                                <h3>Artigo em destaque</h3>
                                 <p>
                                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quaerat neque
-                                    quod nulla cum commodi fuga sapiente, deleniti harum. Ea est nobis deserunt
+                                    quod nulla cum commodi fuga sapiente. Ea est nobis deserunt
                                     dignissimos mollitia eos illum, vero dolorem modi.
                                 </p>
                                 <button class="btnLeiaMais">
@@ -141,10 +143,10 @@
                                     MAIS ARTIGOS
                                 </h3>
                                 <ul>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
                                 </ul>
 
                             </td>
@@ -154,18 +156,18 @@
 
                 </td>
                 <td class="colWebdesign">
-                    <table>
-                        <tr>
+                    <table id="tabWebdesign">
+                        <tr class="linTituloTab">
                             <td>
-                                <h2>WEBDESIGN</h2>
+                                <h2>Webdesign</h2>
                             </td>
                         </tr>
-                        <tr>
+                        <tr class="artDestaque">
                             <td>
-                                <h3>Artigo em Destaque</h3>
+                                <h3>Artigo em destaque</h3>
                                 <p>
                                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quaerat neque
-                                    quod nulla cum commodi fuga sapiente, deleniti harum. Ea est nobis deserunt
+                                    quod nulla cum commodi fuga sapiente. Ea est nobis deserunt
                                     dignissimos mollitia eos illum, vero dolorem modi.
                                 </p>
                                 <button class="btnLeiaMais">
@@ -179,10 +181,10 @@
                                     MAIS ARTIGOS
                                 </h3>
                                 <ul>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
-                                    <li>Donec ac elil</li>
-                                    <li>Lorem impsum amet</li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
+                                    <li><span>Donec ac elil</span></li>
+                                    <li><span>Lorem impsum amet</span></li>
                                 </ul>
 
                             </td>
@@ -195,9 +197,7 @@
 
     </main>
     <footer>
-        <p>
-            webmaster.pt
-        </p>
+        webmaster.pt
     </footer>
 </body>
 
