conf: Alterado o diretório das pastas de imagem

--- a/ex1/ex1.html
+++ b/ex1/ex1.html
@@ -16,7 +16,7 @@
             Modi minima quo accusantium eligendi, cum id.
             Possimus delectus eum mollitia labore. Ipsam ad voluptatibus quam.
         </p>
-        <img src="img/1.jfif" alt="Imagem">
+        <img src="../img/1.jfif" alt="Imagem">
     </header>
 </body>
 
