--- a/ex2/ex2.html
+++ b/ex2/ex2.html
@@ -11,7 +11,7 @@
 
         <div class="card">
             <figure>
-                <img src="../ex1/img/2.jpg" alt="Imagem 1">
+                <img src="../img/2.jpg" alt="Imagem 1">
                 <figcaption>
                     Figura 1
                 </figcaption>
@@ -20,7 +20,7 @@
 
         <div class="card">
             <figure>
-                <img src="../ex1/img/3.jpg" alt="Imagem 2">
+                <img src="../img/3.jpg" alt="Imagem 2">
                 <figcaption>
                     Figura 2
                 </figcaption>
@@ -29,7 +29,7 @@
 
         <div class="card">
             <figure>
-                <img src="../ex1/img/4.png" alt="Imagem 3">
+                <img src="../img/4.png" alt="Imagem 3">
                 <figcaption>
                     Figura 3
                 </figcaption>
