feat: Atividade 2 Corrigida

--- a/ex2/ex2.html
+++ b/ex2/ex2.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 2 - Media Queries + Display Flex</title>
+    <link rel="stylesheet" href="ex2.css">
 </head>
 <body>
-    
     <section>
-
         <div class="card">
             <figure>
                 <img src="../img/2.jpg" alt="Imagem 1">
@@ -17,7 +16,6 @@
                 </figcaption>
             </figure>
         </div>
-
         <div class="card">
             <figure>
                 <img src="../img/3.jpg" alt="Imagem 2">
@@ -26,7 +24,6 @@
                 </figcaption>
             </figure>
         </div>
-
         <div class="card">
             <figure>
                 <img src="../img/4.png" alt="Imagem 3">
