feat: Cadastrar Dados no LocalStorage + Exibir em tabela

--- a/json.html
+++ b/json.html
@@ -23,10 +23,17 @@
         <input type="text" name="txtDataNascimento" id="txtDataNascimento"> <br>
 
         <button id="btnCadastrar" type="button">Cadastrar</button>
-        &nbsp;&nbsp;
-        <button id="btnPersistir" type="button">Persistir</button>
 
     </form>
+
+    <table border="1" cellspacing="0" cellpadding="5" id="tabPessoas">
+        <tr>
+            <th>Nome</th>
+            <th>SobreNome</th>
+            <th>CPF</th>
+            <th>Data de Nascimento</th>
+        </tr>
+    </table>
 
     <script src="js/json.js"></script>
 </body>
